welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:19: error: ':' expected but ')' found.
def isFacingTrail(color):Boolean = {
                       ^SlugSnail:36: error: identifier expected but '}' found.
}
^